Aggiustato composer manifest

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
 	"name": "malicious/app-info",
 	"version": "1.0.0",
-	"description": "Example extension which reveals important
-	information about the application",
+	"description": "Example extension which reveals important information about the application",
 	"keywords": ["yii2", "application-info", "example-extension"],
 	"license": "CC-0",
 	"require": {
@@ -16,5 +15,5 @@
 	},
 	"extra": {
 		"bootstrap": "malicious\\Bootstrap"
-	},
+	}
 }
